--- a/index.html
+++ b/index.html
@@ -32,11 +32,13 @@
 
     <!-- Hero Section -->
 
-    <section class="hero-bg l-p l-flex l-justify-center l-align-center">
-        <div class="white-overlay c-card-hero l-flex l-flex-col l-justify-center l-align-center l-p text-center">
-            <h1 class="l-my-1 u-heading u-hero-headline">Welcome To Outback Nursery</h1>
-            <div class="hero-container l-flex l-flex-col l-justify-center l-align-center l-p text-center">
-                <p class="hero-p ">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+    <section class="hero-bg l-flex l-justify-center l-align-center l-p">
+        <div
+            class="hero-overlay white-overlay c-card-hero l-flex l-flex-col l-justify-center l-align-center l-p text-center  l-m">
+            <h1 class="l-mt-1 u-heading u-hero-headline">Welcome To Outback Nursery</h1>
+            <div class="hero-container l-flex l-flex-col l-justify-center l-align-centertext-center l-mt-1">
+                <p class="hero-p u-body-text l-flex l-align-center">Lorem ipsum dolor sit amet, consectetur adipiscing
+                    elit, sed do eiusmod tempor
                     incididunt
                     ut labore et dolore
                     magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
@@ -47,126 +49,154 @@
                     mollit
                     anim id est laborum</p>
 
-                <div class="l-flex l-flex-col l-justify-center l-align-center l-m l-p">
-                    <a href="#" class="button l-p u-font-bold">About Us</a>
-                    <a href="#" class="button l-p u-font-bold">Get In Touch</a>
+                <div class="l-flex l-flex-col l-justify-center l-align-center l-mt-1">
+                    <a href="#" class="button l-p l-mb-1 u-font-bold">About Us</a>
+                    <a href="#" class="button l-p l-mb-1 u-font-bold">Get In Touch</a>
                 </div>
             </div>
         </div>
     </section>
 
-    <div class="u-bg-secondary section-combo">
+    <div class="u-bg-secondary l-flex l-flex-col l-justify-center l-align-center l-px-1 l-pt-1">
 
-        <!-- Explore Section -->
+        <div class="section-combo l-m">
 
-        <section class="explore-bg c-card l-flex l-flex-col l-justify-center l-align-center l-p l-m">
-            <figure class="card__image-container">
-                <img class="card_image" src="./images/plant-image.webp" alt="Icon of a plant" />
-            </figure>
-            <h2 class="l-my-1">Discover your perfect plant</h2>
-            <p class=" text-center white-overlay">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                incididunt ut labore et dolore
-                magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                commodo consequat.</p>
+            <!-- Explore Section -->
+            <section
+                class="max-heright-desktop explore-bg c-card l-flex l-flex-col l-justify-center l-align-center l-p">
+                <figure class="card__image-container">
+                    <img class="card_image" src="./images/plant-image.webp" alt="Icon of a plant" />
+                </figure>
+                <h2 class="l-my-1">Discover your perfect plant</h2>
+                <p class="u-body-text text-center white-overlay l-mb-1 l-p">Lorem ipsum dolor sit amet, consectetur
+                    adipiscing
+                    elit, sed do eiusmod tempor
+                    incididunt ut labore et dolore
+                    magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+                    ea
+                    commodo consequat.</p>
 
-            <div class="l-flex l-flex-col l-justify-center l-align-center">
-                <a href="#" class="button l-p u-font-bold">Explore Plants</a>
-            </div>
-        </section>
+                <div class="l-flex l-flex-col l-justify-center l-align-center">
+                    <a href="#" class="button l-p u-font-bold">Explore Plants</a>
+                </div>
+            </section>
 
-        <!-- Additional Products Section -->
+            <!-- Additional Products Section -->
 
-        <section class="products-bg c-card l-flex l-flex-col l-justify-center l-align-center l-p l-m">
-            <figure class="card__image-container">
-                <img class="card_image" src="./images/products-mage.webp" alt="Icon of services" />
-            </figure>
-            <h2 class="l-my-1">Our Other Products</h2>
-            <p class=" text-center white-overlay">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                incididunt ut labore et dolore
-                magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                commodo consequat.</p>
+            <section
+                class="max-heright-desktop products-bg c-card l-flex l-flex-col l-justify-center l-align-center l-p">
+                <figure class="card__image-container">
+                    <img class="card_image" src="./images/products-mage.webp" alt="Icon of services" />
+                </figure>
+                <h2 class="l-my-1">Our Other Products</h2>
+                <p class=" text-center  u-body-text white-overlay l-mb-1 l-p">Lorem ipsum dolor sit amet, consectetur
+                    adipiscing
+                    elit, sed do eiusmod tempor
+                    incididunt ut labore et dolore
+                    magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+                    ea
+                    commodo consequat.</p>
 
-            <div class="l-flex l-flex-col l-justify-center l-align-center">
-                <a href="#" class="button l-p u-font-bold">Products & Services</a>
-            </div>
-        </section>
+                <div class="l-flex l-flex-col l-justify-center l-align-center">
+                    <a href="#" class="button l-p u-font-bold">Other Products</a>
+                </div>
+            </section>
+
+        </div>
+
     </div>
 
-
-    <div class="u-bg-secondary section-combo">
+    <div class="u-bg-secondary l-flex l-flex-col l-justify-center l-align-center l-px-1">
 
         <!-- Gift Card Section -->
+        <div class="section-combo l-m">
 
-        <section class="giftcard-bg c-card l-flex l-flex-col l-justify-center l-align-center l-p l-m">
-            <figure class="card__image-container">
-                <img class="card_image" src="./images/gift-card-image.webp" alt="Icon of a giftcard" />
-            </figure>
-            <h2 class="l-my-1">Grab A Gift Card</h2>
-            <p class=" text-center white-overlay">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                incididunt ut labore et dolore
-                magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                commodo consequat.</p>
+            <section
+                class="max-heright-desktop giftcard-bg c-card l-flex l-flex-col l-justify-center l-align-center l-p">
+                <figure class="card__image-container">
+                    <img class="card_image" src="./images/gift-card-image.webp" alt="Icon of a giftcard" />
+                </figure>
+                <h2 class="l-my-1">Grab A Gift Card</h2>
+                <p class=" text-center white-overlay l-mb-1 l-p  u-body-text">Lorem ipsum dolor sit amet, consectetur
+                    adipiscing
+                    elit, sed do eiusmod tempor
+                    incididunt ut labore et dolore
+                    magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+                    ea
+                    commodo consequat.</p>
 
-            <div class="l-flex l-flex-col l-justify-center l-align-center">
-                <a href="#" class="button l-p u-font-bold">Grab a giftcard</a>
-            </div>
+                <div class="l-flex l-flex-col l-justify-center l-align-center">
+                    <a href="#" class="button l-p u-font-bold">Grab a giftcard</a>
+                </div>
 
-        </section>
+            </section>
 
-        <!-- Social & news Section -->
+            <!-- Social & news Section -->
 
-        <section class="social-bg c-card l-flex l-flex-col l-justify-center l-align-center l-p l-m">
-            
-            <figure class="card__image-container">
-                <img class="card_image"  src="./images/news-image.webp" alt="Icon of news" />
-            </figure>
-            <h2 class="l-my-1">Social & News</h2>
-            <p class=" text-center white-overlay">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                incididunt ut labore et dolore
-                magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                commodo consequat.</p>
+            <section class="max-heright-desktop social-bg c-card l-flex l-flex-col l-justify-center l-align-center l-p">
 
-            <div class="l-flex l-flex-col l-justify-center l-align-center">
-                <a href="#" class="button l-p u-font-bold">Stay Updated</a>
-            </div>
-        </section>
+                <figure class="card__image-container">
+                    <img class="card_image" src="./images/news-image.webp" alt="Icon of news" />
+                </figure>
+                <h2 class="l-my-1">Social & News</h2>
+                <p class=" text-center white-overlay l-p l-mb-1  u-body-text">Lorem ipsum dolor sit amet, consectetur
+                    adipiscing
+                    elit, sed do eiusmod tempor
+                    incididunt ut labore et dolore
+                    magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+                    ea
+                    commodo consequat.</p>
+
+                <div class="l-flex l-flex-col l-justify-center l-align-center">
+                    <a href="#" class="button l-p u-font-bold">Stay Updated</a>
+                </div>
+            </section>
+
+        </div>
 
     </div>
 
     <!-- Get in touch form-->
 
-    <section class="u-bg-secondary u-bg-primary l-p">
-        <div class="form-container c-card l-flex l-flex-col l-justify-center l-align-center l-p contact-bg">
-            <h2 class="l-my-1">Get In Touch</h2>
+    <div class="u-bg-secondary l-flex l-flex-col l-justify-center l-align-center l-p l-mx-1">
+
+        <div class="contact-bg l-w-100 c-card l-flex l-flex-col l-justify-center l-align-center form-container-max l-p">
+
+            <div class="form-container l-w-100 l-m l-flex l-flex-col l-justify-center l-align-center">
+                <h2 class="l-my-1">Get In Touch</h2>
 
 
-            <input type="text" id="exampleInput" name="exampleInput" placeholder="Name">
+                <input type="text" class="l-w-100" id="exampleInput" name="exampleInput" placeholder="Name">
 
-            <input type="text" id="exampleInput" name="exampleInput" placeholder="Email">
-            <input type="text" id="exampleInput" name="exampleInput" placeholder="Message">
+                <input type="text" class="l-w-100" id="exampleInput" name="exampleInput" placeholder="Email">
+                <input type="text" class="l-w-100" id="exampleInput" name="exampleInput" placeholder="Message">
 
-            <div class="l-flex l-flex-col l-justify-center l-align-center">
-                <a href="#" class="button l-p u-font-bold">Submit</a>
+                <div class="l-flex l-flex-col l-justify-center l-align-center l-mt-1">
+                    <a href="#" class="button l-p u-font-bold">Submit</a>
+                </div>
+
             </div>
 
         </div>
 
-    </section>
+    </div>
 
     <!-- testimonial Section -->
 
     <section class="u-bg-secondary l-flex l-flex-col l-justify-center l-align-center l-p">
-        <div class="form-container l-flex l-flex-col l-py-1 l-flex-row-desktop">
+        <div class="form-container-max l-flex l-flex-col l-py-1 l-flex-row-desktop">
 
             <!-- Accordion Item 1 -->
-            <div class="accordion-item testimonials-bg">
+            <div class="accordion-item testimonials-bg l-mb-1">
                 <button class="accordion-toggle u-heading u-heading-2"
                     onclick="toggleAccordion('accordion-content-1', this)">
                     Mark Thompson
                     <i class="fas fa-chevron-down accordion-icon"></i>
                 </button>
                 <div id="accordion-content-1" class="accordion-content u-body-text">
-                    <p class="u-text-primary white-overlay">"As a gardening enthusiast, I have visited many nurseries, but the Outback
+                    <p class="u-text-primary white-overlay l-p l-mb-1">"As a gardening enthusiast, I have visited many
+                        nurseries,
+                        but the Outback
                         Nursery stands out for its unique selection of native plants. Their knowledgeable staff helped
                         me choose the perfect shrubs for my arid garden. The quality and health of their plants are
                         exceptional. Highly recommended for anyone looking to add some native beauty to their
@@ -176,14 +206,16 @@
             </div>
 
             <!-- Accordion Item 2 -->
-            <div class="accordion-item testimonials-bg">
+            <div class="accordion-item testimonials-bg l-mb-1">
                 <button class="accordion-toggle u-heading u-heading-2"
                     onclick="toggleAccordion('accordion-content-2', this)">
                     Emily Jenkins
                     <i class="fas fa-chevron-down accordion-icon"></i>
                 </button>
                 <div id="accordion-content-2" class="accordion-content u-body-text">
-                    <p class="u-text-primary white-overlay">"I recently moved to the area and wanted to create a garden that reflects
+                    <p class="u-text-primary white-overlay l-p l-mb-1">"I recently moved to the area and wanted to
+                        create a garden
+                        that reflects
                         the local flora. Outback Nursery offered me not just plants but also valuable advice on
                         sustainable gardening. Their passion for conservation and the variety of native plants they have
                         is impressive. My garden is now thriving, thanks to their top-notch plants and guidance."</p>
@@ -192,18 +224,21 @@
             </div>
 
             <!-- Accordion Item 3 -->
-            <div class="accordion-item testimonials-bg">
+            <div class="accordion-item testimonials-bg l-mb-1">
                 <button class="accordion-toggle u-heading u-heading-2"
                     onclick="toggleAccordion('accordion-content-3', this)">
                     Susan Harper
                     <i class="fas fa-chevron-down accordion-icon"></i>
                 </button>
                 <div id="accordion-content-3" class="accordion-content u-body-text">
-                    <p class="u-text-primary white-overlay">"Finding Outback Nursery was a game-changer for my landscaping business.
+                    <p class="u-text-primary white-overlay l-p l-mb-1">"Finding Outback Nursery was a game-changer for
+                        my
+                        landscaping business.
                         The diversity and quality of their native plant selection are unparalleled. Their staff is not
                         only knowledgeable but also genuinely enthusiastic about helping me find the right plants for my
                         projects."</p>
-                    <p class="u-text-secondary u-font-semibold">- Alex Johnson, Project Manager at Innovative Solutions</p>
+                    <p class="u-text-secondary u-font-semibold">- Alex Johnson, Project Manager at Innovative Solutions
+                    </p>
                 </div>
             </div>
 
@@ -216,16 +251,14 @@
 
     <footer class="l-flex">
         <div>
-            <h3><i class="fas fa-map-marker-alt"></i> Address</h3>
-            <p>1234 Street Name, City, Country</p>
-            <h3><i class="fas fa-envelope"></i> Email</h3>
-            <p>contact@example.com</p>
-            <h3><i class="fas fa-phone"></i> Phone</h3>
-            <p>+1 234 567 8900</p>
+            <p class="u-body-text l-mb-1"><i class="fas fa-map-marker-alt l-px-1"></i>1234 Street Name, City, Country
+            </p>
+            <p class="u-body-text l-mb-1"><i class="fas fa-envelope l-px-1"></i>contact@example.com</p>
+            <p class="u-body-text l-mb-1"><i class="fas fa-phone l-px-1"></i>+1 234 567 8900</p>
         </div>
-    
-        <h4>© 2024 Outback Nursery. All rights reserved.</h4>
-    </footer>    
+
+        <h4 class="u-body-text u-font-bold l-m">© 2024 Outback Nursery. All rights reserved.</h4>
+    </footer>
 
     <script src="./app.js"></script>
 
