--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <figure class="card__image-container">
                     <img class="card_image" src="./images/plant-image.webp" alt="Icon of a plant" />
                 </figure>
-                <h2 class="l-my-1">Discover your perfect plant</h2>
+                <h2 class="l-my-1 u-heading-1">Discover your perfect plant</h2>
                 <p class="u-body-text text-center white-overlay l-mb-1 l-p">Lorem ipsum dolor sit amet, consectetur
                     adipiscing
                     elit, sed do eiusmod tempor
@@ -88,7 +88,7 @@
                 <figure class="card__image-container">
                     <img class="card_image" src="./images/products-mage.webp" alt="Icon of services" />
                 </figure>
-                <h2 class="l-my-1">Our Other Products</h2>
+                <h2 class="l-my-1 u-heading-1">Our Other Products</h2>
                 <p class=" text-center  u-body-text white-overlay l-mb-1 l-p">Lorem ipsum dolor sit amet, consectetur
                     adipiscing
                     elit, sed do eiusmod tempor
@@ -116,7 +116,7 @@
                 <figure class="card__image-container">
                     <img class="card_image" src="./images/gift-card-image.webp" alt="Icon of a giftcard" />
                 </figure>
-                <h2 class="l-my-1">Grab A Gift Card</h2>
+                <h2 class="l-my-1 u-heading-1">Grab A Gift Card</h2>
                 <p class=" text-center white-overlay l-mb-1 l-p  u-body-text">Lorem ipsum dolor sit amet, consectetur
                     adipiscing
                     elit, sed do eiusmod tempor
@@ -138,7 +138,7 @@
                 <figure class="card__image-container">
                     <img class="card_image" src="./images/news-image.webp" alt="Icon of news" />
                 </figure>
-                <h2 class="l-my-1">Social & News</h2>
+                <h2 class="l-my-1 u-heading-1">Social & News</h2>
                 <p class=" text-center white-overlay l-p l-mb-1  u-body-text">Lorem ipsum dolor sit amet, consectetur
                     adipiscing
                     elit, sed do eiusmod tempor
@@ -163,7 +163,7 @@
         <div class="contact-bg l-w-100 c-card l-flex l-flex-col l-justify-center l-align-center form-container-max l-p">
 
             <div class="form-container l-w-100 l-m l-flex l-flex-col l-justify-center l-align-center">
-                <h2 class="l-my-1">Get In Touch</h2>
+                <h2 class="l-my-1 u-heading-1">Get In Touch</h2>
 
 
                 <input type="text" class="l-w-100" id="exampleInput" name="exampleInput" placeholder="Name">
